Changelog
=========

Unreleased
----------

Fixes

- Clear triggers when loading new project to prevent left-over triggers from
  the previously loaded project.


[1.6.0] - January 2024
----------------------

Added

- MIDI input port scripts.
- Show warning when SFZ engine fails to load.
- When saving a project that was not saved before, and that still has the default
  new project name, show an input box for the user to set the name before saving.
- After saving/save-as, rescan the projects directory to update the project open
  menu.

Changes

- Refactored warnings backend. Double-clicking on warnings now go to the
  corresponding GUI area. Warnings text update when port names are updated.

Fixes

- Script warnings related crash: when port warnings appeared after a script
  warning was active, crash would happen when script warning was removed.
- Fix script editor OK button not doing anything after a script warning was
  double-clicked while the script editor was already visible.
- Correct button tooltips in MIDI send list editor.


[1.5.0] - December 2023
-----------------------

Added

- MIDI scripting for patch layers.
- Other JACK connections can now also break a connection, keeping the ports
  disconnected.
- Create project backups when saving a project.
  Backups are created in a backup subdirectory in the project directory. Two
  backups are created - one before saving, and one after saving. This ensures
  data is backed up in the case the project is opened by a previous version of
  Konfyt that does not do backups and throws away data related to newer features.
- Live mode shortcut keys to change layer gains.
- Time for each console print message.
- Option in settings to open last project at startup.
- Save window maximized state when quitting and restore at startup.
- Command-line option to start minimized.
- Ask before saving project in a non-empty directory.
- Menu entry in filesystem context menu to copy path.