@@ -4,6 +4,11 @@ Changelog
 Unreleased
 ----------
 
+Changes
+
+- MIDI port connection check boxes are now in their own "MIDI" column and the
+  audio "L" and "R" columns have been renamed to "Left" and "Right".
+
 Fixes
 
 - Clear triggers when loading new project to prevent left-over triggers from
